--- a/src/main/resources/static/TCR/TCRtext.html
+++ b/src/main/resources/static/TCR/TCRtext.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Model Test</title>
+  <title>ImmunoFlash Sever</title>
 
   <link rel="stylesheet" href="/src/menu.css" />
   <link href="/src/server.css" rel="stylesheet" type="text/css">
@@ -15,10 +15,22 @@
 
 
   <style>
+
     .squares
     {
       position:absolute;
     }
+
+
+    .gif{
+      position: absolute;
+      left: 0.5%;
+      z-index: 1;
+      top: 35%;
+      background-color: transparent; /* 设置图像背景为透明 */
+    }
+
+
   </style>
 
 
@@ -27,6 +39,26 @@
 
 
 <body>
+
+<div class="gif">
+  <img alt="Walking Totoro"
+       src="/images/mygif.gif"
+       height="154"
+       width="340"
+  />
+</div>
+
+
+<!--地球仪-->
+<!--<div class = "GPS_box">-->
+<!--  <script-->
+<!--          type="text/javascript"-->
+<!--          src="//rf.revolvermaps.com/0/0/2.js?i=55iiomp3udu&amp;m=8&amp;s=130&amp;c=ff0000&amp;t=1"-->
+<!--          async="async">-->
+
+<!--  </script>-->
+<!--</div>-->
+
 
 <!--原来的背景-->
 <canvas id="canvas"></canvas>
@@ -135,16 +167,16 @@
 
 
         <br><br/>
-        <b><label>&ensp;&ensp;Email:</label></b>
+        <b><label>&ensp;&ensp;Email(选填):</label></b>
         <!--          先不写required,先进行测试-->
         <!--        <input type = "text"  id="Email_address" name="Email_address"  size="25" placeholder= 'Please enter your email address' required>-->
-        <input type = "text"  id="Email_address" name="Email_address"  size="25" placeholder= 'Please enter your email address' required >
+        <input type = "text"  id="Email_address" name="Email_address"  size="25" placeholder= 'Please enter your email address'>
         <br><br/>
 
 
-        <label>&ensp;&ensp;
-          <input type="checkbox" name="checkbox"> 是否需要热图
-        </label>
+<!--        <label>&ensp;&ensp;-->
+<!--          <input type="checkbox" name="checkbox"> 是否需要热图-->
+<!--        </label>-->
 
 
       </div>
@@ -184,20 +216,44 @@
 
 <script>
 
-
-  // 监听按钮点击事件
+  // 监听按钮点击事件(邮箱可以不输入)
   $("#submitFormButton").on("click", function () {
 
-    // 检查表单的有效性
-    var isFormValid = $("form")[0].checkValidity();
-    if (!isFormValid) {
-      // 如果表单验证不通过，则显示提示信息
-      alert("Please fill in all the information completely.");
-      return;
-    }
+    // 获取除了邮箱外的所有输入框
+    var inputs = $("form input[type='text']").not("#Email_address");
+    var isFormValid = true;
+
+    // 检查所有输入框是否为空
+    inputs.each(function() {
+      if (!$(this).val()) {
+        // 如果输入框为空，则将表单有效性设为false
+        isFormValid = false;
+        // 可以在此处针对具体输入框进行警告信息的设置
+        alert("Please fill in all the information completely.");
+        return false; // 结束循环
+      }
+    });
+
     // 如果表单验证通过，则提交表单
-    $("form").submit();
+    if (isFormValid) {
+      $("form").submit();
+    }
   });
+
+  //必须输入邮箱
+  // // 监听按钮点击事件
+  // $("#submitFormButton").on("click", function () {
+  //
+  //   // 检查表单的有效性
+  //   var isFormValid = $("form")[0].checkValidity();
+  //   if (!isFormValid) {
+  //     // 如果表单验证不通过，则显示提示信息
+  //     alert("Please fill in all the information completely.");
+  //     return;
+  //   }
+  //   // 如果表单验证通过，则提交表单
+  //   $("form").submit();
+  // });
 
 
   // 在表单提交成功后，显示邮件发送结果
@@ -209,9 +265,9 @@
       type: "POST",
       url: "/submitFormTCRtext", // 提交到后端处理邮件发送的接口
       data: formData,
-      success: function (data) {
-        // 处理成功，显示邮件发送结果
-        alert(data);
+      success: function () {
+        // 处理成功，跳转到Result.html页面
+        window.location.href = "/Result.html";
       },
       error: function () {
         // 处理错误
@@ -224,3 +280,11 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
+
