--- a/src/main/resources/static/Example.html
+++ b/src/main/resources/static/Example.html
@@ -176,16 +176,17 @@
 <div class="body_content">
 
   <div id="header">
-    <h1><a class="red" href="index.html">ImmunoFlash Sever</a></h1>
+    <h1><a class="red" href="index.html">ImmunoFlash</a></h1>
     <ul id="menu">
-      <li><a href="index.html" title="DLpTCR Server">首页</a></li>
-      <li ><a href="Home.html" title="Home">Home</a></li>
-      <li><a href="Server.html" title="DLpTCR Server">Web Server</a></li>
+      <li><a href="index.html" title="Home">Home</a></li>
+      <li ><a href="Model.html" title="Model">Model</a></li>
+      <li><a href="Server.html" title="BindPredict">BindPredict</a></li>
+      <li><a href="PDB.html" title="Docking Station">Docking Station</a></li>
       <li><a href="Download.html" title="Download">Download</a></li>
       <li class="active"><a href="Example.html" title="Example">Example</a></li>
+      <li><a href="Help.html" title="Help">Help</a></li>
 
-      <li><a href="Citation.html" title="Citation">Citation</a></li>
-      <!--<li><a href="./tutorial" title="Tutorial">Tutorial</a></li>-->
+
     </ul>
   </div>
 
@@ -194,7 +195,7 @@
   <br>
   <br>
   <div class="info">
-    <h3 class="underlined" align="left">DLpTCR Server Example Download</h3>
+    <h3 class="underlined" align="left">ImmunoFlash Server Example Download</h3>
     <br>
     <tr>
       <td>
@@ -202,8 +203,47 @@
         <p style="text-align:justify; text-justify:inter-ideograph;">
                     <span style="font-size: large; font-family: Times New Roman, Times, serif;">
                         <strong>
-                            &nbsp;&nbsp;&nbsp;&nbsp;The first ten peptide-TCR pairs collected from PDB database are positive sequences,
-                            which have been confirmed by experiment.The last ten peptide-TCR pairs are negative sequences.
+                            &nbsp;&nbsp;&nbsp;&nbsp;欢迎访问我们的示例文件下载页面！为了帮助您更好地了解并使用ImmunoFlash模型，我们提供了一系列精心设计的示例文件。这些文件展示了如何准备和格式化您的数据，以便利用我们的模型进行高效准确的TCR与抗原肽结合预测。<br>
+                          <br>示例文件内容：<br>
+
+                          <font size="4" face="Times New Roman, Times, serif">
+                            <strong>1.免疫原性预测示例文件:</strong><br>
+                            <strong>&nbsp;&nbsp;&nbsp;&nbsp;描述:示例文件包含TCR和抗原序列，用于演示如何准备数据进行预测分析。</strong><br>
+                            <strong>&nbsp;&nbsp;&nbsp;&nbsp;下载链接:</strong>
+                            <a href="/TCRexample">Download</a>
+                          </font><br>
+
+                          <font size="4" face="Times New Roman, Times, serif">
+                            <strong>2.TCR上传示例文件(.pdb):</strong><br>
+                            <strong>&nbsp;&nbsp;&nbsp;&nbsp;描述:提供TCR结构的示例文件，用于分子对接分析。</strong><br>
+                            <strong>&nbsp;&nbsp;&nbsp;&nbsp;下载链接:</strong>
+                            <a href="/PDBexample1">Download</a>
+                          </font><br>
+
+                          <font size="4" face="Times New Roman, Times, serif">
+                            <strong>3.抗原上传示例文件(.pdb):</strong><br>
+                            <strong>&nbsp;&nbsp;&nbsp;&nbsp;描述:提供抗原结构的示例文件，用于分子对接分析。</strong><br>
+                            <strong>&nbsp;&nbsp;&nbsp;&nbsp;下载链接:</strong>
+                            <a href="/PDBexample2">Download</a>
+                          </font><br>
+
+                          <font size="4" face="Times New Roman, Times, serif">
+                            <strong>4.分子对接结果展示文件:</strong><br>
+                            <strong>&nbsp;&nbsp;&nbsp;&nbsp;描述:展示分子对接过程的动态结果，文件格式为GIF。</strong><br>
+                            <strong>&nbsp;&nbsp;&nbsp;&nbsp;下载链接:</strong>
+                            <a href="/OutputExample">Download</a>
+                          </font><br>
+
+
+
+                          <br>使用示例文件的好处：<br>
+                          1.快速上手：<br>
+                          通过这些示例文件，您可以快速掌握如何为您的数据集格式化，并开始使用ImmunoFlash模型进行预测。<br>
+                          2.验证模型效能：<br>
+                          利用示例文件，您可以直观地验证ImmunoFlash模型的预测效能，加深对其精准度和可靠性的理解。<br>
+                          3.促进学习交流：<br>
+                          这些文件还可以作为学习和交流的媒介，帮助用户之间分享经验，探讨模型的应用与优化。<br>
+
                         </strong>
 
 
@@ -211,12 +251,34 @@
         </p>
 
 
-        <p>
-          <font size="4" face="Times New Roman, Times, serif">
-            <strong>Example file:</strong>
-            <a href="/TCRexample">Download</a>
-          </font>
-        </p>
+<!--        <p>-->
+<!--          <font size="4" face="Times New Roman, Times, serif">-->
+<!--            <strong>结合预测输入示例文件:</strong>-->
+<!--            <a href="/TCRexample">Download</a>-->
+<!--          </font>-->
+<!--        </p>-->
+
+<!--        <p>-->
+<!--          <font size="4" face="Times New Roman, Times, serif">-->
+<!--            <strong>上传TCR(.pdb)示例文件</strong>-->
+<!--            <a href="/PDBexample1">Download</a>-->
+<!--          </font>-->
+<!--        </p>-->
+
+<!--        <p>-->
+<!--          <font size="4" face="Times New Roman, Times, serif">-->
+<!--            <strong>上传抗原PDB示例文件:</strong>-->
+<!--            <a href="/PDBexample2">Download</a>-->
+<!--          </font>-->
+<!--        </p>-->
+
+
+<!--        <p>-->
+<!--          <font size="4" face="Times New Roman, Times, serif">-->
+<!--            <strong>分子对接结果示例文件:</strong>-->
+<!--            <a href="/PDBexample2">Download</a>-->
+<!--          </font>-->
+<!--        </p>-->
 
 
       </td>
@@ -230,9 +292,9 @@
 
   <div id="footer">
 
-    <p align="center">Jiang Lab:Bioinformatic Team (<a href="http://www.jianglab.org.cn/">Jiang Lab</a>)
-      ----------------------------------------------------Contact: qhjiang@hit.edu.cn</p>
-    <p align="center"><a href="http://www.beian.miit.gov.cn/">赣ICP备20010039号</a></p>
+    <p align="center">Liu Lab:Bioinformatic Team (Liu Lab)
+      ----------------------------------------------------Contact: fangxing_@njtech.edu.cn</p>
+<!--    <p align="center"><a href="http://www.beian.miit.gov.cn/">赣ICP备20010039号</a></p>-->
 
   </div>
 
