--- a/src/main/resources/static/Result.html
+++ b/src/main/resources/static/Result.html
@@ -95,15 +95,17 @@
 
     <br><br/><br><br/>
     <div id="header">
-        <h1><a class="red" href="/index.html">ImmunoFlash Sever</a></h1>
+        <h1><a class="red" href="index.html">ImmunoFlash</a></h1>
         <ul id="menu">
-            <li><a href="/index.html" title="DLpTCR Server">首页</a></li>
-            <li><a href="/Home.html" title="Home">Home</a></li>
-            <li class="active"><a href="/Server.html" title="DLpTCR Server">Web Server</a></li>
-            <li><a href="/Download.html" title="Download">Download</a></li>
-            <li><a href="/Example.html" title="Example">Example</a></li>
+            <li><a href="index.html" title="Home">Home</a></li>
+            <li><a href="Model.html" title="Model">Model</a></li>
+            <li class="active"><a href="Server.html" title="BindPredict">BindPredict</a></li>
+            <li><a href="PDB.html" title="Docking Station">Docking Station</a></li>
+            <li><a href="Download.html" title="Download">Download</a></li>
+            <li><a href="Example.html" title="Example">Example</a></li>
+            <li><a href="Help.html" title="Help">Help</a></li>
 
-            <li><a href="/Citation.html" title="Citation">Citation</a></li>
+<!--            <li><a href="/Citation.html" title="Citation">Citation</a></li>-->
             <!--<li><a href="./tutorial" title="Tutorial">Tutorial</a></li>-->
         </ul>
     </div>
@@ -149,9 +151,9 @@
     <!--  <br><br/><br><br/>-->
     <div id="footer">
 
-        <p align="center">Jiang Lab:Bioinformatic Team (<a href="http://www.jianglab.org.cn/">Jiang Lab</a>)
-            ----------------------------------------------------Contact: qhjiang@hit.edu.cn</p>
-        <p align="center"><a href="http://www.beian.miit.gov.cn/">赣ICP备20010039号</a></p>
+        <p align="center">Liu Lab:Bioinformatic Team (Liu Lab)
+            ----------------------------------------------------Contact: fangxing_@njtech.edu.cn</p>
+<!--        <p align="center"><a href="http://www.beian.miit.gov.cn/">赣ICP备20010039号</a></p>-->
 
     </div>
 
