--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,7 +10,7 @@
     .gif{
       position: absolute;
       left: 0.5%;
-      /*z-index: 1;*/
+      z-index: 1;
       top: 35%;
       background-color: transparent; /* 设置图像背景为透明 */
     }
@@ -161,17 +161,6 @@
 </div>
 
 
-<!--地球仪-->
-<!--<div class = "GPS_box">-->
-<!--  <script-->
-<!--          type="text/javascript"-->
-<!--          src="//rf.revolvermaps.com/0/0/2.js?i=55iiomp3udu&amp;m=8&amp;s=130&amp;c=ff0000&amp;t=1"-->
-<!--          async="async">-->
-
-<!--  </script>-->
-<!--</div>-->
-
-
 
 <!--动态背景（左）-->
 <div class='squares'>
@@ -206,15 +195,18 @@
 <div class="body_content">
 
   <div id="header">
-    <h1><a class="red" href="index.html">ImmunoFlash Sever</a></h1>
+    <h1><a class="red" href="index.html">ImmunoFlash</a></h1>
     <ul id="menu">
-      <li class="active"><a href="index.html" title="DLpTCR Server">首页</a></li>
-      <li><a href="Home.html" title="Home">Home</a></li>
-      <li><a href="Server.html" title="DLpTCR Server">Web Server</a></li>
+      <li class="active"><a href="index.html" title="Home">Home</a></li>
+      <li><a href="Model.html" title="Model">Model</a></li>
+      <li><a href="Server.html" title="BindPredict">BindPredict</a></li>
+      <li><a href="PDB.html" title="Docking Station">Docking Station</a></li>
       <li><a href="Download.html" title="Download">Download</a></li>
       <li><a href="Example.html" title="Example">Example</a></li>
+      <li><a href="Help.html" title="Help">Help</a></li>
 
-      <li><a href="Citation.html" title="Citation">Citation</a></li>
+
+<!--      <li><a href="Citation.html" title="Citation">Citation</a></li>-->
       <!--<li><a href="./tutorial" title="Tutorial">Tutorial</a></li>-->
     </ul>
   </div>
@@ -242,10 +234,10 @@
 
   <div id="footer">
 
-    <p align="center">Jiang Lab:Bioinformatic Team (<a href="http://www.jianglab.org.cn/">Jiang Lab</a>)
-      ----------------------------------------------------Contact: qhjiang@hit.edu.cn</p>
-    <p align="center"><a href="http://www.beian.miit.gov.cn/">赣ICP备20010039号</a></p>
-
+    <p align="center">Liu Lab:Bioinformatic Team (Liu Lab)
+      ----------------------------------------------------Contact: fangxing_@njtech.edu.cn</p>
+<!--    <p align="center"><a href="http://www.beian.miit.gov.cn/">赣ICP备20010039号</a></p>-->
+<!--Copyright 2024 -->
   </div>
 
 </div>
